tests/mm0_mmu/fail/bad-sort2314.mm0
-- bad modifier order
strict provable pure free sort s2314;